```mermaid
erDiagram
    ADMINS ||--o{ CERTIFICATES : "issues/manages"
    STUDENTS ||--o{ CERTIFICATES : "receives"
    COURSES ||--o{ CERTIFICATES : "associated with"
    
    ADMINS {
        int admin_id PK
        string username UK
        string email UK
        string password_hash
        string role "e.g., super_admin, admin, course_manager"
        boolean is_active
        timestamp last_login_at
        timestamp created_at
        timestamp updated_at
    }
    
    STUDENTS {
        int student_id PK
        string name
        string email UK
        string mobile
        string address
        timestamp created_at
        timestamp updated_at
        timestamp deleted_at
    }
    
    COURSES {
        int course_id PK
        string code UK "e.g., CS, IT"
        string title
        text description
        int duration_months
        boolean is_active
        timestamp created_at
        timestamp updated_at
        timestamp deleted_at
    }
    
    CERTIFICATES {
        string csl_number PK "e.g., 2025-CS-0001-ABCDEF"
        int student_id FK
        int course_id FK
        int issued_by_admin_id FK
        date issue_date
        string status "active, revoked, suspended"
        timestamp revoked_at
        int revoked_by_admin_id FK
        string revocation_reason
        text notes
        timestamp created_at
        timestamp updated_at
    }
    
    AUDIT_LOGS {
        int log_id PK
        int admin_id FK
        string action "CREATE, UPDATE, DELETE, REVOKE"
        string entity_type "certificate, student, course"
        int entity_id
        json old_values
        json new_values
        string ip_address
        timestamp created_at
    }
    
    VERIFICATION_LOGS {
        int log_id PK
        string csl_number FK
        string ip_address
        string user_agent
        boolean verification_result
        timestamp verified_at
    }

    CERTIFICATES ||--o{ AUDIT_LOGS : "tracked by"
    ADMINS ||--o{ AUDIT_LOGS : "performs"
    CERTIFICATES ||--o{ VERIFICATION_LOGS : "verified via"
```